--- a/frontend/components/StopsExplorerTimetableRow/StopsExplorerTimetableRow.module.css
+++ b/frontend/components/StopsExplorerTimetableRow/StopsExplorerTimetableRow.module.css
@@ -139,12 +139,14 @@
 
 .localities,
 .localities div {
+  color: var(--gray4);
   display: flex;
   flex-direction: row;
-  gap: var(--size-xs);
+  gap: 1px 5px;
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
+  line-height: 1.2;
 }
 
 .localities p {
@@ -152,6 +154,7 @@
   white-space: nowrap;
   max-width: 600px;
   overflow: hidden;
+  line-height: 1.2;
 }
 
 /* * */
