Links and CSS fix

--- a/frontend/components/EncmExplorerGrid/EncmExplorerGrid.module.css
+++ b/frontend/components/EncmExplorerGrid/EncmExplorerGrid.module.css
@@ -34,6 +34,7 @@
   text-align: center;
   padding: 10px 15px 8px 15px;
   font-weight: 700;
+  font-size: 18px;
   line-height: 1;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
