--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -2,11 +2,8 @@
   /* BRAND */
   --carris-metropolitana: #ffdd01;
 
-  /* REALTIME */
-  --realtime-0: rgba(0, 215, 50, 0);
-  --realtime-50: rgba(0, 215, 50, 0.5);
-  --realtime-75: rgba(0, 215, 50, 0.75);
-  --realtime-100: rgba(0, 205, 50, 1);
+  /* DEBUG */
+  --debug: #003ba1;
 
   /* GRAYS */
   --gray-0: #ffffff;
@@ -18,8 +15,16 @@
   --gray-6: #5a5a5a;
   --gray-7: #000000;
 
-  /* DEBUG */
-  --debug: #003ba1;
+  /* REALTIME */
+  --realtime-0: rgba(0, 215, 50, 0);
+  --realtime-15: rgba(0, 215, 50, 0.15);
+  --realtime-25: rgba(0, 215, 50, 0.25);
+  --realtime-50: rgba(0, 215, 50, 0.5);
+  --realtime-75: rgba(0, 215, 50, 0.75);
+  --realtime-100: rgba(0, 205, 50, 1);
+
+  /* REALTIME */
+  --green-7: #2b8a3e;
 
   /* * */
   /* * */
