Updated debug color

--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -3,7 +3,7 @@
   --carris-metropolitana: #ffdd01;
 
   /* DEBUG */
-  --debug: #003ba1;
+  --debug: #055252;
 
   /* GRAYS */
   --gray-0: #ffffff;
