--- a/frontend/components/StopsExplorerTimetableRow/StopsExplorerTimetableRow.module.css
+++ b/frontend/components/StopsExplorerTimetableRow/StopsExplorerTimetableRow.module.css
@@ -137,24 +137,18 @@
   color: var(--gray6);
 }
 
-.localities,
-.localities div {
-  color: var(--gray4);
-  display: flex;
-  flex-direction: row;
-  gap: 1px 4px;
+.localities {
   align-items: center;
   justify-content: flex-start;
-  flex-wrap: wrap;
-  line-height: 1.2;
-}
-
-.localities p {
   text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 600px;
+  white-space: normal;
   overflow: hidden;
   line-height: 1.2;
+  color: var(--gray8);
+}
+
+.localities span {
+  color: var(--gray4);
 }
 
 /* * */
