--- a/frontend/components/StopsExplorerTimetableDividerLine/StopsExplorerTimetableDividerLine.module.css
+++ b/frontend/components/StopsExplorerTimetableDividerLine/StopsExplorerTimetableDividerLine.module.css
@@ -3,7 +3,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 8px 1fr;
+  grid-template-columns: 8px 1fr auto;
   grid-template-rows: 8px;
   width: 100%;
   align-items: center;
@@ -18,7 +18,7 @@
   width: 100%;
   aspect-ratio: 1;
   border-radius: 999px;
-  background-color: rgb(230, 75, 35);
+  background-color: var(--current-time-100);
 }
 
 /* * */
@@ -27,7 +27,28 @@
 .line {
   height: 2px;
   width: 100%;
-  background-color: rgb(230, 75, 35);
+  background-color: var(--current-time-100);
   border-top-right-radius: 999px;
   border-bottom-right-radius: 999px;
+}
+
+/* * */
+/* TIME */
+
+.time {
+  padding-left: 3px;
+  font-size: 10px;
+  font-weight: 800;
+  color: var(--current-time-100);
+}
+
+.time span {
+  font-weight: 800;
+  animation: blink-animation 2s steps(2, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    opacity: 0.25;
+  }
 }
