--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -17,6 +17,7 @@
 
   /* REALTIME */
   --realtime-0: rgba(0, 215, 50, 0);
+  --realtime-5: rgba(0, 215, 50, 0.05);
   --realtime-15: rgba(0, 215, 50, 0.15);
   --realtime-25: rgba(0, 215, 50, 0.25);
   --realtime-50: rgba(0, 215, 50, 0.5);
