Toolbar CSS fixes

--- a/frontend/components/StopsExplorerToolbar/StopsExplorerToolbar.module.css
+++ b/frontend/components/StopsExplorerToolbar/StopsExplorerToolbar.module.css
@@ -3,7 +3,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: auto auto auto 1fr;
+  grid-template-columns: auto 1fr;
   grid-template-rows: auto;
   gap: var(--size-md);
   padding: var(--size-sm);
@@ -11,13 +11,24 @@
   justify-content: flex-start;
 }
 
+.controls {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  align-items: center;
+  justify-content: flex-start;
+  gap: var(--size-md);
+}
+
 @media (max-width: 700px) {
   .container {
-    grid-template-columns: 1fr auto auto;
+    grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     gap: var(--size-sm);
   }
-  .fullWidth {
-    grid-column: 1/4;
+  .container > *:first-child {
+    order: 2;
+  }
+  .container > *:last-child {
+    order: 1;
   }
 }
