--- a/frontend/components/AppFooterNav/AppFooterNav.module.css
+++ b/frontend/components/AppFooterNav/AppFooterNav.module.css
@@ -11,11 +11,17 @@
   color: white;
 }
 
+@media (max-width: 1200px) {
+  .container {
+    gap: 35px;
+  }
+}
+
 @media (max-width: 1100px) {
   .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 50px;
+    gap: 30px;
     padding: 30px;
   }
 }
@@ -24,7 +30,7 @@
   .container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 50px;
+    gap: 30px;
   }
 }
 
@@ -68,8 +74,16 @@
 /* * */
 /* LINKS */
 
-.group a,
-.corporate a {
+.link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+}
+
+.group .link,
+.corporate .link {
   font-size: 16px;
   font-weight: 500;
   color: #fff;
@@ -77,22 +91,26 @@
   transition: all 300ms ease;
 }
 
-.corporate a {
+.corporate .link {
   opacity: 0.6;
 }
 
-.group a:hover {
+.group .link:hover {
   opacity: 1;
   text-decoration: underline;
 }
 
-.corporate a:hover {
+.corporate .link:hover {
   opacity: 0.8;
 }
 
 @media (max-width: 900px) {
-  .group a,
-  .corporate a {
+  .link.realtime {
+    margin-left: 12px;
+  }
+
+  .group .link,
+  .corporate .link {
     width: 100%;
   }
   .container {
