Remove header and footer on standalone

--- a/frontend/components/AppFooter/AppFooter.module.css
+++ b/frontend/components/AppFooter/AppFooter.module.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media all and (display-mode: standalone) {
+  .container {
+    display: none;
+  }
+}
+
 .container.debugEnabled {
   background-color: var(--debug);
 }
