--- a/frontend/components/AppHeader/AppHeader.module.css
+++ b/frontend/components/AppHeader/AppHeader.module.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media all and (display-mode: standalone) {
+  .container {
+    display: none;
+  }
+}
+
 /* * */
 /* NAVIGATION > MENUS */
 
