--- a/frontend/components/Layouts/Layouts.module.css
+++ b/frontend/components/Layouts/Layouts.module.css
@@ -1,3 +1,6 @@
+/* * */
+/* BASE LAYOUT */
+
 .baseLayout {
   display: grid;
   grid-template-rows: 1fr;
@@ -21,6 +24,9 @@
   }
 }
 
+/* * */
+/* INNER WRAPPER */
+
 .innerWrapper {
   width: 100%;
   height: 100%;
@@ -28,6 +34,9 @@
   position: relative;
   width: 100%;
 }
+
+/* * */
+/* COLUMNS */
 
 .oneFullColumn {
   grid-template-columns: 1fr;
@@ -41,7 +50,9 @@
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* * */
 /* SECTION */
+
 .section {
   display: flex;
   flex-direction: column;
