--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -4,14 +4,46 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 400px;
-  grid-template-rows: 600px;
+  grid-template-rows: auto 600px;
   width: 100%;
 }
 
 @media (max-width: 900px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-rows: 300px minmax(100px, auto);
+    grid-template-rows: auto 300px minmax(100px, auto);
+  }
+}
+
+@media all and (display-mode: standalone) {
+  .container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: auto 1fr;
+  }
+}
+
+@media all and (max-width: 900px) and (display-mode: standalone) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 300px min-content;
+    width: 100%;
+    overflow: scroll;
+  }
+}
+
+/* * */
+/* TOOLBAR */
+
+.toolbar {
+  grid-column: 1/3;
+}
+
+@media (max-width: 900px) {
+  .toolbar {
+    grid-column: 1;
   }
 }
 
@@ -28,6 +60,13 @@
 @media (max-width: 900px) {
   .sidebar {
     border: none;
+  }
+}
+
+@media all and (display-mode: standalone) {
+  .sidebar {
+    position: relative;
+    height: 100%;
   }
 }
 
