--- a/frontend/components/AppVersion/AppVersion.module.css
+++ b/frontend/components/AppVersion/AppVersion.module.css
@@ -10,9 +10,16 @@
   font-weight: 600;
   opacity: 0.3;
   transition: all 300ms ease;
+  text-align: center;
 }
 
 .version:hover {
   opacity: 0.4;
   text-decoration: none;
+}
+
+@media (max-width: 900px) {
+  .version {
+    width: 100%;
+  }
 }
