--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -28,7 +28,7 @@
   .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 300px min-content;
+    grid-template-rows: auto 2fr 3fr;
     width: 100%;
     overflow: scroll;
   }
