--- a/frontend/components/Pannel/Pannel.module.css
+++ b/frontend/components/Pannel/Pannel.module.css
@@ -23,12 +23,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #000000;
+  background-color: #000000;
   color: #ffffff;
   padding: 15px 18px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   overflow: hidden;
+  transition: all 300ms ease;
 }
 
 @media (max-width: 700px) {
@@ -42,6 +43,9 @@
   .header {
     border-radius: 0px;
     padding: var(--size-md);
+  }
+  .header.debugEnabled {
+    background-color: var(--debug);
   }
 }
 
