--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -48,11 +48,24 @@
 }
 
 /* * */
+/* MAP */
+
+.map {
+  border-right: 1px solid var(--gray3);
+}
+
+@media (max-width: 900px) {
+  .map {
+    border-right: none;
+    border-bottom: 1px solid var(--gray3);
+  }
+}
+
+/* * */
 /* SIDEBAR */
 
 .sidebar {
   overflow-y: auto;
-  border-left: 1px solid var(--gray3);
   display: flex;
   flex-direction: column;
 }
@@ -68,21 +81,6 @@
     position: relative;
     height: 100%;
   }
-}
-
-/* * */
-/* BETA ICON */
-
-.betaIcon {
-  font-size: 14px;
-  font-weight: 800;
-  line-height: 1;
-  text-transform: uppercase;
-  color: #ffffff;
-  padding: 3px 4px;
-  border: 2px solid #ffffff;
-  border-radius: 3px;
-  opacity: 0.9;
 }
 
 /* * */
