--- a/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
+++ b/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
@@ -1,20 +1,26 @@
+/* * */
+/* CONTAINER */
+
 .container {
   display: flex;
   flex-direction: column;
-  gap: var(--size-md);
+  gap: var(--size-lg);
   padding: var(--size-lg);
   background-color: var(--carris-metropolitana);
 }
 
-.mainSelect {
+/* * */
+/* FILTERS */
+
+.filters {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: var(--size-md);
 }
 
 @media (max-width: 900px) {
-  .mainSelect {
+  .filters {
     grid-template-columns: 1fr;
   }
 }
