--- a/frontend/components/StatusMessage/StatusMessage.module.css
+++ b/frontend/components/StatusMessage/StatusMessage.module.css
@@ -1,17 +1,83 @@
+/* * */
+/* CONTAINER */
+
 .container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  background: #ffeebe;
-  padding: 15px 20px;
-  border-radius: 10px;
+  align-items: stretch;
+  justify-content: stretch;
+  gap: var(--size-sm);
+  width: 100%;
+  max-width: 1400px;
+  height: 100%;
+  margin: auto;
+  margin-top: var(--size-lg);
+  padding: 0 var(--size-lg);
 }
 
 @media (max-width: 700px) {
   .container {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media all and (display-mode: standalone) {
+  .container {
+    padding: 0;
+    margin: 0;
+    max-width: none;
+  }
+}
+
+/* * */
+/* INNER WRAPPER */
+
+.innerWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background: #ffeebe;
+  padding: 15px 18px;
+  border-radius: 10px;
+}
+
+@media (max-width: 700px) {
+  .innerWrapper {
     border-radius: 0;
   }
 }
+
+@media all and (display-mode: standalone) {
+  .innerWrapper {
+    border-radius: 0;
+  }
+}
+
+/* * */
+/* HEADER WRAPPER */
+
+.headerWrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+/* * */
+/* CONTENT WRAPPER */
+
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* * */
+/* TEXTS */
 
 .title,
 .explanation,
