--- a/frontend/components/LinesExplorerContentPatternPathStopPdf/LinesExplorerContentPatternPathStopPdf.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStopPdf/LinesExplorerContentPatternPathStopPdf.module.css
@@ -1,18 +1,34 @@
+/* * */
+/* CONTAINER */
+
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 7px;
-  padding: 3px 10px;
+  padding: 4px 12px;
   font-size: 12px;
   font-weight: 600;
-  border-radius: 5px;
-  border: 1px solid var(--gray2);
+  border-radius: 3px;
+  border: 1px solid var(--gray3);
   background-color: var(--gray1);
+}
+
+/* * */
+/* PDF FILE EXISTS */
+
+.pdfFileExists {
   transition: all 200ms ease;
 }
 
-.container:hover {
+.pdfFileExists:hover {
   background-color: var(--gray2);
   border-color: var(--gray5);
+}
+
+/* * */
+/* PDF FILE DOES NOT EXIST */
+
+.pdfFileDoesNotExist {
+  opacity: 0.4;
 }
