--- a/frontend/components/StatusMessage/StatusMessage.module.css
+++ b/frontend/components/StatusMessage/StatusMessage.module.css
@@ -38,7 +38,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background: #ffeebe;
+  color: var(--status-background-ok-text);
+  background-color: var(--status-background-ok-background);
   padding: 15px 18px;
   border-radius: 10px;
 }
@@ -74,6 +75,13 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+/* * */
+/* COLAPSE ICON */
+
+.colapseIcon {
+  color: var(--status-background-ok-text);
 }
 
 /* * */
