--- a/frontend/components/LinesExplorerContent/LinesExplorerContent.module.css
+++ b/frontend/components/LinesExplorerContent/LinesExplorerContent.module.css
@@ -12,14 +12,15 @@
 .container {
   display: grid;
   grid-template-columns: 5fr 3fr;
-  grid-template-rows: auto 600px;
+  grid-template-rows: 600px;
   width: 100%;
+  border-top: 1px solid var(--gray3);
 }
 
 @media (max-width: 900px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-rows: auto 300px minmax(100px, auto);
+    grid-template-rows: 300px minmax(100px, auto);
   }
 }
 
@@ -28,7 +29,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 1fr;
   }
 }
 
@@ -36,22 +37,9 @@
   .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 2fr 3fr;
+    grid-template-rows: 2fr 3fr;
     width: 100%;
     overflow: scroll;
-  }
-}
-
-/* * */
-/* TOOLBAR */
-
-.toolbar {
-  grid-column: 1/3;
-}
-
-@media (max-width: 900px) {
-  .toolbar {
-    grid-column: 1;
   }
 }
 
