--- a/frontend/components/LinesExplorerContentPatternPathStop/LinesExplorerContentPatternPathStop.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStop/LinesExplorerContentPatternPathStop.module.css
@@ -26,26 +26,34 @@
 }
 
 /* * */
-/* STOP INFO */
+/* INNER WRAPPER */
 
-.info {
+.innerWrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   width: 100%;
-  padding: 20px 14px;
+  padding: 10px 14px;
   gap: var(--size-lg);
 }
 
 @media (max-width: 600px) {
-  .info {
+  .innerWrapper {
     padding-top: 23px;
   }
 }
 
-.header,
-.body {
+.selected .innerWrapper {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+/* * */
+/* STOP INFO & CONTENT */
+
+.stopInfo,
+.content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -53,6 +61,25 @@
   width: 100%;
   gap: var(--size-sm);
 }
+
+/* * */
+/* LABEL */
+
+.label {
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--gray-3);
+}
+
+@media (max-width: 600px) {
+  .label {
+    font-size: 11px;
+  }
+}
+/* * */
+/* * */
+/* * */
+/* * */
 
 .ids {
   display: flex;
@@ -72,4 +99,23 @@
   border: 1px solid var(--gray3);
   background-color: var(--gray1);
   cursor: pointer;
+}
+
+/* * */
+/* DESKTOP & MOBILE */
+
+.onlyDesktop {
+  display: inherit;
+}
+.onlyMobile {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .onlyDesktop {
+    display: none;
+  }
+  .onlyMobile {
+    display: inherit;
+  }
 }
