--- a/frontend/components/LinesExplorerContentPatternPathStopSpine/LinesExplorerContentPatternPathStopSpine.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStopSpine/LinesExplorerContentPatternPathStopSpine.module.css
@@ -2,29 +2,33 @@
 /* CONTAINER */
 
 .container {
-  background-color: blue;
-  padding-top: 20px;
-}
-
-/* * */
-/* SPINE */
-
-.spine {
-  padding-top: 25px;
+  padding-top: 12px;
   background-color: var(--gray2);
 }
 
-.spine.start {
-  margin-top: 25px;
+.container.isSelected {
+  padding-top: 21px;
+}
+
+.container.start {
+  margin-top: 12px;
   padding-top: 0;
   border-top-left-radius: 999px;
   border-top-right-radius: 999px;
 }
 
-.spine.end {
+.container.start.isSelected {
+  margin-top: 20px;
+}
+
+.container.end {
   border-bottom-left-radius: 999px;
   border-bottom-right-radius: 999px;
-  height: 39px;
+  height: 26px;
+}
+
+.container.end.isSelected {
+  height: 36px;
 }
 
 /* * */
