--- a/frontend/components/LinesExplorerContentPatternPathStopName/LinesExplorerContentPatternPathStopName.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStopName/LinesExplorerContentPatternPathStopName.module.css
@@ -12,6 +12,10 @@
 /* STOP NAME */
 
 .stopName {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3px;
   font-size: 14px;
   font-weight: 600;
   color: var(--gray-7);
