--- a/frontend/components/LinesExplorerContent/LinesExplorerContent.module.css
+++ b/frontend/components/LinesExplorerContent/LinesExplorerContent.module.css
@@ -2,19 +2,15 @@
 /* CONTAINER */
 
 .container {
-  display: flex;
-  flex-direction: column;
-}
-
-/* * */
-/* CONTAINER */
-
-.container {
   display: grid;
   grid-template-columns: 6fr 4fr;
   grid-template-rows: 600px;
   width: 100%;
   border-top: 1px solid var(--gray3);
+}
+
+.container.isHidden {
+  display: none;
 }
 
 @media (max-width: 900px) {
