--- a/frontend/components/LinesExplorerContentSelectPattern/LinesExplorerContentSelectPattern.module.css
+++ b/frontend/components/LinesExplorerContentSelectPattern/LinesExplorerContentSelectPattern.module.css
@@ -1,10 +1,15 @@
+/* * */
+/* CONTAINER */
+
 .container {
   display: flex;
   flex-direction: column;
   gap: var(--size-md);
-  background-color: var(--carris-metropolitana);
   width: 100%;
 }
+
+/* * */
+/* MAIN SELECT */
 
 .mainSelect {
   width: 100%;
@@ -18,6 +23,9 @@
     grid-template-columns: 1fr;
   }
 }
+
+/* * */
+/* COMBOBOX TARGET */
 
 .comboboxTarget {
   display: grid;
@@ -40,9 +48,49 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
 }
 
+.comboboxInput {
+  position: relative;
+  z-index: 9999;
+}
+
+/* * */
+/* COMBOBOX OPTION */
+
+.comboboxDropdown {
+  z-index: 9990;
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.25);
+}
+
+/* * */
+/* COMBOBOX OPTION */
+
 .comboboxOption {
   padding: 6px;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--reference-1);
 }
+
+/* * */
+/* COMBOBOX SELECTION */
+
+.comboboxSelection {
+  /* padding: 6px; */
+  font-size: 17px;
+  font-weight: 700;
+  color: var(--reference-1);
+
+  display: block; /* or inline-block */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 1.5em;
+  line-height: 1.5em;
+}
+
+/* * */
+/* SELECTED */
 
 .selected {
   background-color: var(--gray-2) !important;
