--- a/frontend/components/LinesExplorerSelectDate/LinesExplorerSelectDate.module.css
+++ b/frontend/components/LinesExplorerSelectDate/LinesExplorerSelectDate.module.css
@@ -2,9 +2,16 @@
 /* CONTAINER */
 
 .container {
+  width: auto;
   background-color: var(--gray1);
   border-radius: 4px;
   overflow: hidden;
+}
+
+@media (max-width: 600px) {
+  .container {
+    width: 100%;
+  }
 }
 
 /* * */
@@ -17,7 +24,13 @@
   padding: 3px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
+  .innerWrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 450px) {
   .innerWrapper {
     grid-template-columns: 1fr;
   }
