--- a/frontend/components/LinesExplorerContentHeader/LinesExplorerContentHeader.module.css
+++ b/frontend/components/LinesExplorerContentHeader/LinesExplorerContentHeader.module.css
@@ -4,7 +4,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: var(--size-xs);
+  gap: 10px;
   padding: var(--size-lg);
   align-items: center;
   width: 100%;
@@ -18,5 +18,6 @@
 
 .destinationLabel {
   color: var(--gray6);
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 600;
 }
