--- a/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
+++ b/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
@@ -15,7 +15,7 @@
 .filters {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: var(--size-lg);
 }
 
