--- a/frontend/components/LinesExplorerMap/LinesExplorerMap.module.css
+++ b/frontend/components/LinesExplorerMap/LinesExplorerMap.module.css
@@ -1,8 +1,10 @@
 /* * */
-/* CONTAINER */
+/* POPUP WRAPPER */
 
-.container {
-  /* height: 400px; */
-  height: 100%;
+.popupWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
   width: 100%;
 }
