--- a/frontend/components/LinesExplorerContentPatternPathStopTimetable/LinesExplorerContentPatternPathStopTimetable.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStopTimetable/LinesExplorerContentPatternPathStopTimetable.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  row-gap: 10px;
+  row-gap: 12px;
   margin-top: 2px;
 }
 
@@ -14,7 +14,7 @@
 
 .column {
   display: grid;
-  grid-template-rows: 26px repeat(auto-fill, 26px);
+  grid-auto-rows: 26px;
 }
 
 /* * */
