--- a/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
+++ b/frontend/components/LinesExplorerToolbar/LinesExplorerToolbar.module.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-lg);
-  padding: var(--size-lg);
+  padding-top: var(--size-lg);
+  padding-bottom: var(--size-lg);
   background-color: var(--carris-metropolitana);
 }
 
@@ -17,6 +18,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: var(--size-lg);
+  padding-left: var(--size-lg);
+  padding-right: var(--size-lg);
 }
 
 @media (max-width: 900px) {
