--- a/frontend/components/LinesExplorerToolbarSelectLine/LinesExplorerToolbarSelectLine.module.css
+++ b/frontend/components/LinesExplorerToolbarSelectLine/LinesExplorerToolbarSelectLine.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: var(--size-md);
   background-color: var(--carris-metropolitana);
+  padding-left: var(--size-lg);
+  padding-right: var(--size-lg);
 }
 
 .mainSelect {
