Remove border on mobile

--- a/frontend/components/Pannel/Pannel.module.css
+++ b/frontend/components/Pannel/Pannel.module.css
@@ -130,6 +130,12 @@
   border-top: none;
 }
 
+@media (max-width: 700px) {
+  .typeA .wrapper {
+    border: none;
+  }
+}
+
 .typeA .content {
   padding: 0;
 }
