--- a/frontend/components/LinesExplorerToolbarPeriods/LinesExplorerToolbarPeriods.module.css
+++ b/frontend/components/LinesExplorerToolbarPeriods/LinesExplorerToolbarPeriods.module.css
@@ -45,8 +45,13 @@
 }
 
 .indicator {
-  width: 12px;
-  height: 4px;
+  width: 8px;
+  height: 8px;
+  opacity: 1;
   transition: all 250ms ease;
-  background-color: white;
+  background-color: var(--reference-0);
+}
+
+.indicator[data-active='true'] {
+  background-color: var(--reference-1);
 }
