--- a/frontend/components/LinesExplorerToolbarPeriods/LinesExplorerToolbarPeriods.module.css
+++ b/frontend/components/LinesExplorerToolbarPeriods/LinesExplorerToolbarPeriods.module.css
@@ -47,11 +47,12 @@
 .indicator {
   width: 8px;
   height: 8px;
-  opacity: 1;
+  opacity: 0.7;
   transition: all 250ms ease;
   background-color: var(--reference-0);
 }
 
 .indicator[data-active='true'] {
-  background-color: var(--reference-1);
+  width: 24px;
+  opacity: 1;
 }
