--- a/frontend/components/LinesExplorerToolbarFilters/LinesExplorerToolbarFilters.module.css
+++ b/frontend/components/LinesExplorerToolbarFilters/LinesExplorerToolbarFilters.module.css
@@ -22,7 +22,10 @@
 /* TOGGLE FILTERS */
 
 .toggleFilters {
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* * */
@@ -30,16 +33,11 @@
 
 .toggleFiltersButton {
   color: var(--reference-1);
-  background-color: rgba(255, 255, 255, 0.75);
-  transition: all 300ms ease;
-}
-
-.toggleFiltersButton:hover {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
-.toggleFiltersButton.isOpen {
   background-color: var(--reference-0);
+  border-radius: 999px;
+  transition: all 300ms ease;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /* * */
