--- a/frontend/components/LinesExplorerContentPatternPathStopRealtime/LinesExplorerContentPatternPathStopRealtime.module.css
+++ b/frontend/components/LinesExplorerContentPatternPathStopRealtime/LinesExplorerContentPatternPathStopRealtime.module.css
@@ -3,45 +3,31 @@
 
 .container {
   display: flex;
-  flex-direction: row;
-  gap: 20px;
+  flex-direction: column;
+  gap: 6px;
 }
 
 /* * */
-/* ROW */
+/* LABEL */
 
-.row {
+.label {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: var(--gray-5);
+}
+
+@media (max-width: 600px) {
+  .label {
+    font-size: 11px;
+  }
+}
+
+/* * */
+/* ESTIMATES */
+
+.estimates {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  gap: 6px;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-/* * */
-/* ARRIVALS */
-
-.estimatedArrival,
-.scheduledArrival {
-  padding-right: 3px;
-}
-
-.estimatedArrival:last-child,
-.scheduledArrival:last-child {
-  padding-right: 0;
-}
-
-/* * */
-/* ESTIMATED ARRIVAL */
-
-.estimatedArrival {
-  color: var(--realtime-100);
-}
-
-/* * */
-/* SCHEDULED ARRIVAL */
-
-.scheduledArrival {
-  color: var(--reference-1);
+  gap: 20px;
 }
