--- a/frontend/components/StatusMessage/StatusMessage.module.css
+++ b/frontend/components/StatusMessage/StatusMessage.module.css
@@ -38,10 +38,18 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  color: var(--status-background-ok-text);
-  background-color: var(--status-background-ok-background);
   padding: 15px 18px;
   border-radius: 10px;
+}
+
+.warning .innerWrapper {
+  color: var(--status-background-warning-text);
+  background-color: var(--status-background-warning-background);
+}
+
+.ok .innerWrapper {
+  color: var(--status-background-ok-text);
+  background-color: var(--status-background-ok-background);
 }
 
 @media (max-width: 700px) {
@@ -80,7 +88,11 @@
 /* * */
 /* COLAPSE ICON */
 
-.colapseIcon {
+.warning .colapseIcon {
+  color: var(--status-background-warning-text);
+}
+
+.ok .colapseIcon {
   color: var(--status-background-ok-text);
 }
 
