--- a/nextjs/components/AppAuthenticationSignIn/AppAuthenticationSignIn.module.css
+++ b/nextjs/components/AppAuthenticationSignIn/AppAuthenticationSignIn.module.css
@@ -7,3 +7,13 @@
   flex-direction: column;
   gap: 10px;
 }
+
+/* * */
+/* PROVIDERS WRAPPER */
+
+.providerWrapper {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+}
