--- a/nextjs/components/AppAuthentication/AppAuthentication.module.css
+++ b/nextjs/components/AppAuthentication/AppAuthentication.module.css
@@ -3,7 +3,12 @@
 
 .container {
   width: 100%;
-  padding: 50px 0;
+  height: 100%;
+  background-color: var(--gray4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* * */
