MVP for PIP feedback

--- a/nextjs/components/FrontendPipStops/FrontendPipStops.module.css
+++ b/nextjs/components/FrontendPipStops/FrontendPipStops.module.css
@@ -12,7 +12,7 @@
 
 .answersGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 10px;
   width: 100%;
 }
