Lines layout update, new patterns/realtime endpoint

--- a/nextjs/components/FrontendLinesContent/FrontendLinesContent.module.css
+++ b/nextjs/components/FrontendLinesContent/FrontendLinesContent.module.css
@@ -3,8 +3,8 @@
 
 .container {
   display: grid;
-  grid-template-columns: 6fr 4fr;
-  grid-template-rows: 600px;
+  grid-template-columns: 5fr 6fr;
+  grid-template-rows: 800px;
   width: 100%;
   border-top: 1px solid var(--gray3);
 }
@@ -43,7 +43,7 @@
 /* MAP */
 
 .map {
-  border-right: 1px solid var(--gray3);
+  border-left: 1px solid var(--gray3);
 }
 
 @media (max-width: 900px) {
