--- a/nextjs/styles/variables.css
+++ b/nextjs/styles/variables.css
@@ -64,27 +64,33 @@
   --color-realtime-100: rgba(0, 205, 50, 1);
 
 	/* * */
+	/* SIZE / GLOBAL WIDTH */
+
+	--size-global-width: 1200px;
+
+	/* * */
 	/* SIZE / SPACING */
 
 	--size-spacing-5: 5px;
   --size-spacing-10: 10px;
   --size-spacing-15: 15px;
   --size-spacing-20: 20px;
+  --size-spacing-30: 30px;
 
 	/* * */
 	/* FONT */
 
 	--font-size-heading: 26px;
-	--font-weight-heading: 'bold';
+	--font-weight-heading: 700; /* Bold */
 
 	--font-size-title: 20px;
-	--font-weight-title: 'semi-bold';
+	--font-weight-title: 600; /* SemiBold */
 
 	--font-size-text: 14px;
-	--font-weight-text: 'medium';
+	--font-weight-text: 500; /* Medium */
 
 	--font-size-muted: 14px;
-	--font-weight-muted: 'medium';
+	--font-weight-muted: 500; /* SemiBold */
 
 }
 
@@ -96,17 +102,36 @@
 		/* * */
 		/* COLOR / SYSTEM */
 
-		--color-background-100: #3c3c46;
-		--color-background-200: #32323c;
-		--color-background-300: rgb(152, 136, 46);
+		--color-system-background-100: #3c3c46;
+		--color-system-background-200: #32323c;
+		--color-system-background-300: rgb(152, 136, 46);
 
-		--color-border-100: #50505a;
-		--color-border-200: #82828c;
+		--color-system-border-100: #50505a;
+		--color-system-border-200: #82828c;
 
-		--color-text-100: #ffffff;
-		--color-text-200: #c8c8d2;
-		--color-text-300: #8c8c96;
-		--color-text-400: #64646e;
+		--color-system-text-100: #ffffff;
+		--color-system-text-200: #c8c8d2;
+		--color-system-text-300: #8c8c96;
+		--color-system-text-400: #64646e;
+
+  }
+}
+
+/* * */
+
+@media (max-width: 500px) {
+  :root {
+
+		/* * */
+		/* FONT */
+
+		--font-size-heading: 26px;
+
+		--font-size-title: 20px;
+
+		--font-size-text: 14px;
+
+		--font-size-muted: 14px;
 
   }
 }
