--- a/nextjs/styles/reset.css
+++ b/nextjs/styles/reset.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+	background-color: var(--color-system-background-100);
 }
 
 h1,
@@ -32,4 +33,8 @@ input,
 textarea {
   user-select: text;
   -webkit-touch-callout: default;
+}
+
+img {
+	display: flex;
 }
