--- a/nextjs/components/FrontendHeader/styles.module.css
+++ b/nextjs/components/FrontendHeader/styles.module.css
@@ -1,33 +1,50 @@
 /* * */
-/* CONTAINER */
+/* HEADER HEIGHT */
+/* Header must have fixed height to make it easier to */
+/* center elements inside it, allow for full height menus */
+/* and compensate for the fixed positioning */
 
+.spacer,
 .container {
-	width: 100%;
-  background-color: var(--color-system-background-100);
-	border-bottom: 1px solid var(--color-system-border-100);
-}
-
-.container.fixed {
-	position: fixed;
-}
-
-.container.hidden {
-	opacity: 0;
-}
-
-@media all and (display-mode: standalone) {
-	.container {
-		display: none;
-  }
+	height: 70px;
 }
 
 /* * */
-/* INNER WRAPPER */
+/* CONTAINER */
 
-.innerWrapper {
+.container {
+	top:0;
+	left: 0;
+	width: 100%;
+	position: fixed;
+}
+
+/* * */
+/* MAIN WRAPPER */
+
+.mainWrapper {
 	display: flex;
-  flex-direction: row;
+	flex-direction: row;
+	gap: var(--size-spacing-30);
+	margin: auto;
+	width: 100%;
+	height: 100%;
+	max-width: var(--size-global-width);
   align-items: center;
   justify-content: space-between;
-	padding: var(--size-spacing-15) var(--size-spacing-20);
+	background-color: var(--color-system-background-100);
+	border-bottom: 1px solid var(--color-system-border-100);
+}
+
+/* * */
+/* NAV WRAPPER */
+
+.navWrapper {
+	display: flex;
+	flex-direction: row;
+	gap: var(--size-spacing-30);
+	width: 100%;
+	height: 100%;
+  align-items: center;
+  justify-content: flex-end;
 }
