--- a/nextjs/styles/reset.css
+++ b/nextjs/styles/reset.css
@@ -1,10 +1,9 @@
 html,
 body {
-  height: 100%;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-	background-color: var(--color-system-background-100);
+	background-color: var(--color-system-background-200);
 }
 
 h1,
@@ -26,7 +25,7 @@ a {
   box-sizing: border-box;
   user-select: none;
   -webkit-touch-callout: none;
-  font-family: inter, sans-serif;
+  font-family: var(--font-inter), sans-serif;
 }
 
 input,
