--- a/nextjs/components/FrontendHomepage/styles.module.css
+++ b/nextjs/components/FrontendHomepage/styles.module.css
@@ -1,28 +1,33 @@
 /* * */
-/* CONTAINER */
+/* FEATURED WRAPPER */
 
-.container {
+.featuredWrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 1px;
   background-color: var(--color-system-background-100);
-	border-bottom: 1px solid var(--color-system-border-100);
 }
 
-@media all and (display-mode: standalone) {
-	.container {
-		display: none;
-  }
+@media only screen and (max-width: 900px) {
+	.featuredWrapper {
+		grid-template-columns: 1fr;
+	}
 }
 
 /* * */
-/* INNER WRAPPER */
+/*  */
 
-.innerWrapper {
+.quickSearchWrapper,
+.carouselWrapper {
+	background-color: var(--color-brand);
+	aspect-ratio: 16/9;
 	display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-	width: 100%;
-	max-width: 1200px;
-	background-color: rgb(238, 238, 253);
-	margin: auto;
-	padding: var(--size-spacing-15) var(--size-spacing-20);
+	align-items: center;
+	justify-content: center;
+}
+
+@media only screen and (max-width: 900px) {
+	.quickSearchWrapper {
+		display: none;
+	}
 }
