Homepage Grid Nav

--- a/nextjs/components/FrontendGridNav/styles.module.css
+++ b/nextjs/components/FrontendGridNav/styles.module.css
@@ -3,12 +3,16 @@
 
 .container {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: repeat(5, 1fr);
+	padding: var(--size-spacing-20);
+	gap: var(--size-spacing-20);
 }
 
 @media (max-width: 500px) {
 	.container {
 		display: flex;
 		flex-direction: column;
+		padding: 0;
+		gap: 0;
 	}
 }
