--- a/nextjs/components/FrontendGridNavItem/styles.module.css
+++ b/nextjs/components/FrontendGridNavItem/styles.module.css
@@ -6,14 +6,31 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-start;
-	gap: var(--size-spacing-20);
+	gap: var(--size-spacing-10);
 	background-color: var(--color-system-background-100);
-	padding: var(--size-spacing-15) var(--size-spacing-20);
-	border-top: 1px solid var(--color-system-border-100);
+	padding: var(--size-spacing-30) var(--size-spacing-20);
+	border: 1px solid var(--color-system-border-100);
+	width: 100%;
 }
 
-.container:last-child {
-	border-bottom: 1px solid var(--color-system-border-100);
+.container:hover {
+	border-color: var(--color-system-border-200);
+	background-color: var(--color-system-background-200);
+}
+
+.container:active {
+	border-color: var(--color-system-border-300);
+	background-color: var(--color-system-background-300);
+}
+
+@media (max-width: 500px) {
+	.container {
+		padding: var(--size-spacing-15) var(--size-spacing-20);
+	border-top: 1px solid var(--color-system-border-100);
+	}
+	.container:last-child {
+		border-bottom: 1px solid var(--color-system-border-100);
+	}
 }
 
 /* * */
@@ -28,8 +45,10 @@
 
 .label {
 	width: 100%;
-	font-size: var(--font-size-title);
-	font-weight: var(--font-weight-title);
+	font-size: var(--font-size-subtitle);
+	font-weight: var(--font-weight-subtitle);
+	line-height: 1.1;
+	/* white-space: nowrap; */
 }
 
 /* * */
