--- a/nextjs/components/FrontendHomepageSupport/styles.module.css
+++ b/nextjs/components/FrontendHomepageSupport/styles.module.css
@@ -1,6 +1,6 @@
 /* * */
-/* CONTAINER */
+/* GRID NAV */
 
-.container {
-  border-bottom: 1px solid var(--color-system-border-100);
+.gridNav {
+  grid-template-columns: repeat(3, 1fr);
 }
