--- a/nextjs/styles/reset.css
+++ b/nextjs/styles/reset.css
@@ -26,6 +26,7 @@ a {
   user-select: none;
   -webkit-touch-callout: none;
   font-family: var(--font-inter), sans-serif;
+	line-height: 1.2;
 }
 
 input,
