--- a/nextjs/components/FrontendHomepageNews/styles.module.css
+++ b/nextjs/components/FrontendHomepageNews/styles.module.css
@@ -1,6 +1,50 @@
 /* * */
-/* CONTAINER */
+/* SLIDE WRAPPER */
 
-.container {
-  border-bottom: 1px solid var(--color-system-border-100);
+.slideWrapper {
+	padding-left: var(--size-spacing-20);
+  padding-bottom: var(--size-spacing-20);
+}
+
+/* * */
+/* CAROUSEL CONTROLS WRAPPER */
+
+.carouselControlsWrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 0 var(--size-spacing-30);
+}
+
+/* * */
+/* CAROUSEL CONTROL */
+
+.carouselControl {
+	opacity: 1;
+	width: 50px;
+	aspect-ratio: 1;
+	border: 1px solid var(--color-system-border-200);
+	background-color: var(--color-system-background-100);
+	color: var(--color-system-text-300);
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+	transition: all 100ms ease;
+}
+
+.carouselControl:hover {
+	border-color: var(--color-system-text-200);
+	color: var(--color-system-text-200);
+	opacity: 1;
+}
+
+.carouselControl:active {
+	color: var(--color-system-text-300);
+	border-color: var(--color-system-text-300);
+	background-color: var(--color-system-background-300);
+	opacity: 1;
+}
+
+.carouselControl[data-inactive] {
+	opacity: 0;
+	cursor: default;
 }
