--- a/nextjs/styles/variables.css
+++ b/nextjs/styles/variables.css
@@ -101,7 +101,7 @@
 	--font-weight-text: 500; /* Medium */
 
 	--font-size-muted: 12px;
-	--font-weight-muted: 500; /* SemiBold */
+	--font-weight-muted: 500; /* Medium */
 
 }
 
